# yldprolog

./: .gitignore  CHANGELOG.md  LICENSE-YieldProlog  LICENSE-grammar  Makefile  README.md  TODO.txt  YP.py  pyproject.toml  setup.cfg  setup.py
compiler/: YPGenerator.py  YPPrologVisitor.py  compile.py  prolog.g4
compiler/YieldProlog/: Compiler.py  Compiler2.py  plcompile.py
compiler/test/: bintree.prolog  clauses.prolog  cut.prolog  disjunction.prolog  dupvarsinhead.prolog  equals.prolog  fact-list.prolog  facts.prolog  fail.prolog  false.prolog  geometricobjects.prolog  ifthen.prolog  lists.prolog  longstring.prolog  negate.prolog  nestedclauses.prolog  newlines.prolog  parentheses.prolog  true.prolog  unicode.prolog
doc/: architecture.md  development.md
examples/xpath/: README.md  books.xml  xpath.py
src/yldprolog/: YPGenerator.py  YPPrologVisitor.py  build.sh  compiler.py  engine.py  errors.py  prolog.g4  prolog.interp  prolog.tokens  prologLexer.interp  prologLexer.py  prologListener.py  prologParser.py  prologVisitor.py  yp_generator.py  yp_prolog_visitor.py
test/: Makefile  defs1.py  defs2.py  eval.prolog  eval.py  geometricobjects.py  jailbreak.prolog  lists.prolog  lists.py  mainscript.prolog  mainscript.py  monkey.prolog  monkey.py  script1a.py  script1b.prolog  script1b.py  subscript.prolog  subscript.py  testYP.py  test_YP.py  test_compiler.py  test_engine.py
test/data/: defs2.prolog  jailbreak.prolog  (+1 more)
tests/: test_compiler.py  test_engine.py
yldprolog/: YPGenerator.py  YPPrologVisitor.py  build.sh  compiler.py  engine.py  yldprolog.py
(+4 files in other folders)
