[metadata]
name = yldprolog
version = 1.2.0
author = Tim Hemel
author_email = tim@securesoftware.nl
description = A rewrite of Yield Prolog for Python
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/timhemel/yldprolog
license_files = LICENSE LICENSE-YieldProlog LICENSE-grammar
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Affero General Public License v3
	Operating System :: OS Independent
keywords =
	prolog

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
	antlr4-python3-runtime==4.9.1
	Click
tests_require =
	pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	yldpc=yldprolog.compiler:main

